--- a/Signal/mqttServer/mosquitto.conf
+++ b/Signal/mqttServer/mosquitto.conf
@@ -1,2 +1,3 @@
-listener 1883 172.20.10.7
-allow_anonymous true
+listener 1883 192.168.8.139
+allow_anonymous false
+password_file /etc/mosquitto/pwfile
